plugins {
    id "com.github.dcendents.android-maven" version "1.5"       // https://github.com/dcendents/android-maven-gradle-plugin
    id "com.jfrog.bintray" version "1.7.3"                      // https://github.com/bintray/gradle-bintray-plugin

    id "me.tatarka.retrolambda" version "3.6.0"
}

apply plugin: 'com.android.library'
apply from: '../config.properties'

android {
    compileSdkVersion config.compileSdkVersion
    buildToolsVersion config.buildToolsVersion

    defaultConfig {
        minSdkVersion config.minSdkVersion
        targetSdkVersion config.targetSdkVersion
        versionCode config.majorVersion * 100 + config.minorVersion * 10 + config.patchVersion
        versionName config.majorVersion + "." + config.minorVersion + "." + config.patchVersion
        multiDexEnabled true

        consumerProguardFiles 'proguard-rules.pro'
    }

    compileOptions {
        targetCompatibility 1.8
        sourceCompatibility 1.8
    }
}

dependencies {
    compile fileTree(dir: 'libs', include: ['*.jar'])
    compile 'com.walfud:walle:2.0.1'
    compile 'com.walfud:cache:1.0.0'
}

apply from: '../jcenter.gradle'